src/objects/Global_Ecosystem_Incumbency__c.object
<CustomObject>
    <fields>
        <fullName>Global_Ecosystem_Incumbency__c</fullName>
        <label>Global Ecosystem Incumbency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Ecosystem Incumbencies</relationshipLabel>
        <relationshipName>Global_Ecosystem_Incumbencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Level_of_Incumbency__c</fullName>
        <inlineHelpText>Install Vendor - Choose this level if all we know is that the Partner has done work/sold product to this customer.
Primary Vendor - Choose this level if we validated that the Partner has an executive-level, economic and relevant relationship w/ customer</inlineHelpText>
        <label>Level of Incumbency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Install Vendor</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <label>New Vendor</label>
                </value>
                <value>
                    <fullName>Primary Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Global Ecosystem Incumbencies</relationshipLabel>
        <relationshipName>Global_Ecosystem_Incumbencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Ecosystem Incumbencies (ISV Partner)</relationshipLabel>
        <relationshipName>Global_Ecosystem_Incumbencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISV</fullName>
                </value>
                <value>
                    <fullName>IaaS/Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Global Ecosystem Incumbency</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Global Ecosystem Incumbency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Ecosystem Incumbencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>